------------------------------------------------------------------------
r1952 | gaser | 2022-02-23 16:41:12

Changed paths:
M       CHANGES.txt
A       cat_surf_flipvalues.m
A       cat_surf_laterality_index.m
M       cat_surf_rename.m
M       cat_vol_morph.m

(1) Changed: Added wrapper to interactively call vat_vol_morph.m.
(2) Fixed:   Corrected handling of 32k-meshes in cat_surf_rename.m 
(3) Added:   New function cat_surf_flipvalues to flip values in resampled
             32k-meshes.
(4) Added:   New function cat_surf_laterality_index to calculate laterality
             index in resampled 32k-meshes.

------------------------------------------------------------------------
r1951 | gaser | 2022-02-23 09:45:57 +0100 (Wed, 23 Feb 2022) | 15 lines

Changed paths:
M       CHANGES.txt
M       cat_spm_results_ui.m
M       cat_surf_results.m
A       cat_vol_img2mip.m
 M      templates_MNI152NLin2009cAsym/suit.csv
 M      templates_MNI152NLin2009cAsym/suit.nii
MM      templates_MNI152NLin2009cAsym/suit.txt

(1) Changed: Updated help text in cat_surf_results.m
(2) Changed: Enabled eigenvariate and CVA function in cat_spm_results_ui.m.
(3) Fixed:   Added check that directory that is saved in SPM.mat really exists
             to cat_spm_results_ui.m.
           

------------------------------------------------------------------------
r1950 | gaser | 2022-02-21 21:10:37 +0100 (Mon, 21 Feb 2022) | 15 lines

Changed paths:
M       CHANGES.txt
M       Contents.m
M       cat_conf_ROI.m
M       cat_conf_long.m
M       html/cat.html
M       templates_MNI152NLin2009cAsym/suit.csv
M       templates_MNI152NLin2009cAsym/suit.nii

(1) Changed: Changed default value for prepavg in longitudinal pipeline to 2.
(2) Changed: Updated default license for SUIT atlas.
(3) Fixed:   Corrected orientation of SUIT atlas  where x-voxel size was not 
             negative (neurological orientation).
           

------------------------------------------------------------------------